@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.122 2004-04-03 11:51:20 aarendsen Exp $
+$Id: changelog.txt,v 1.123 2004-04-07 12:27:49 trisberg Exp $
 
 
 Changes in version 1.0.1 (7.4.2003)
@@ -31,8 +31,12 @@ Package org.springframework.context
 * AbstractMessageSource's "getMessageInternal" method returns null instead of throwing NoSuchMessageException
 * EventPublicationInterceptor implements ApplicationContextAware rather than extending ApplicationObjectSupport
 
+Package org.springframework.jdbc.object
+* added method setSqlReadyForUse for indicating that the sql should be used as provided, no need to add parameter placeholders
+
 Package org.springframework.jdbc.support
 * changed SQLErrorCodesFactory now does cache database product name in a Map based on hashCode from DataSource to avoid unnecessary meta data lookups
+* added an extractDatabaseMetaData method to JdbcUtils.  This change also adds an interface named DatabaseMetaDataCallBackHandler that must be used for this method
 
 Package org.springframework.orm
 * fixed Hibernate Session unbinding in case of JtaTransactionManager and flush failure im beforeCommit synchronization
